Updated Exercise 2.5 to include KeplerGl config file and upload Exercise 2.6

--- a/03 Scripts/MS Exercise 2.5 Top 500 Task.ipynb
+++ b/03 Scripts/MS Exercise 2.5 Top 500 Task.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,8 @@
     "from keplergl import KeplerGl\n",
     "from pyproj import CRS\n",
     "import numpy as np\n",
-    "from matplotlib import pyplot as plt"
+    "from matplotlib import pyplot as plt\n",
+    "import json"
    ]
   },
   {
@@ -43,7 +44,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Stony\\AppData\\Local\\Temp\\ipykernel_20828\\1699888674.py:3: DtypeWarning: Columns (6,8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Stony\\AppData\\Local\\Temp\\ipykernel_21860\\1699888674.py:3: DtypeWarning: Columns (6,8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df_final = pd.read_csv(os.path.join(path, '02 Data', 'Prepared Data', 'final_data.csv'), index_col = 0)\n"
      ]
     }
@@ -571,19 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Take a 30% sample of the dataframe to create the KeplerGl plot\n",
-    "\n",
-    "#df_sample = df_group.sample(frac=0.3, random_state=1)\n",
-    "#print(df_sample)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +585,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6de04b1e7afa4e3c96a0f140a7fd86e6",
+       "model_id": "7118ee842f4c4034a08cf4e0cf6fbf04",
        "version_major": 2,
        "version_minor": 0
       },
@@ -632,24 +621,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save a configuration file\n",
     "\n",
-    "config = m.config"
+    "config = m.config\n",
+    "with open('keplergl_config.json', 'w') as f:\n",
+    "    json.dump(config, f) # Save the configuration as JSON"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write the Python directory to a JSON file\n",
     "\n",
-    "import json\n",
+    "\n",
     "with open(r'C:\\Users\\Stony\\OneDrive\\CareerFoundry\\Data Specialization Course\\envs\\Citi-Bike\\02 Data\\Prepared Data\\config.json', 'w') as f:\n",
     "  json.dump(config, f)"
    ]
