Upload Exercise 2.7 and final dashboard data

--- a/03 Scripts/MS Exercise 2.5 Top 500 Task.ipynb
+++ b/03 Scripts/MS Exercise 2.5 Top 500 Task.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Stony\\AppData\\Local\\Temp\\ipykernel_21860\\1699888674.py:3: DtypeWarning: Columns (6,8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Stony\\AppData\\Local\\Temp\\ipykernel_3280\\1699888674.py:3: DtypeWarning: Columns (6,8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df_final = pd.read_csv(os.path.join(path, '02 Data', 'Prepared Data', 'final_data.csv'), index_col = 0)\n"
      ]
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
        "Name: count, Length: 421, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7118ee842f4c4034a08cf4e0cf6fbf04",
+       "model_id": "66b30f60e0cc410da74c5947e121bb02",
        "version_major": 2,
        "version_minor": 0
       },
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,34 +634,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Write the Python directory to a JSON file\n",
-    "\n",
-    "\n",
-    "with open(r'C:\\Users\\Stony\\OneDrive\\CareerFoundry\\Data Specialization Course\\envs\\Citi-Bike\\02 Data\\Prepared Data\\config.json', 'w') as f:\n",
-    "  json.dump(config, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Map saved to NYC Bike Trips Top 500 Routes.html!\n"
+      "Map saved to NYC Bike Trips Top 500 Routes1.html!\n"
      ]
     }
    ],
    "source": [
     "# Save the KeplerGl map to a HTML file\n",
     "\n",
-    "m.save_to_html(file_name='NYC Bike Trips Top 500 Routes.html', read_only = False, config = config)"
+    "m.save_to_html(file_name='NYC Bike Trips Top 500 Routes1.html', read_only = False, config = config)"
    ]
   },
   {
