--- a/03 Scripts/MSikos Exercise 2.7 Task.ipynb
+++ b/03 Scripts/MSikos Exercise 2.7 Task.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,33 +28,33 @@
     "from plotly.subplots import make_subplots\n",
     "import plotly.graph_objects as go\n",
     "import matplotlib.pyplot as plt\n",
+    "import numerize\n",
+    "import PIL\n",
     "from datetime import datetime as dt\n",
     "from streamlit_keplergl import keplergl_static"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set system path\n",
     "\n",
-    "#path = r'C:\\Users\\Stony\\OneDrive\\CareerFoundry\\Data Specialization Course\\envs\\Citi-Bike'\n",
-    "\n",
-    "path = r'C:\\Users\\Stony\\Videos\\CareerFoundry\\Citi-Bike'"
+    "path = r'C:\\Users\\Stony\\OneDrive\\CareerFoundry\\Data Specialization Course\\envs\\Citi-Bike'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Stony\\AppData\\Local\\Temp\\ipykernel_2060\\1699888674.py:3: DtypeWarning: Columns (6,8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Stony\\AppData\\Local\\Temp\\ipykernel_9232\\1699888674.py:3: DtypeWarning: Columns (6,8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df_final = pd.read_csv(os.path.join(path, '02 Data', 'Prepared Data', 'final_data.csv'), index_col = 0)\n"
      ]
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4441,6 +4441,483 @@
     "go.Scatter(x=daily_rides['date'], y = daily_rides['avg_daily_temp'], name = 'Daily temperature'),\n",
     "secondary_y=True\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Create a smaller dataset by removing unneeded columns and taking a 7% sample of the data using a random seed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ride_id                       object\n",
+       "rideable_type                 object\n",
+       "started_at                    object\n",
+       "ended_at                      object\n",
+       "start_station_name            object\n",
+       "start_station_id              object\n",
+       "end_station_name              object\n",
+       "end_station_id                object\n",
+       "start_lat                    float64\n",
+       "start_lng                    float64\n",
+       "end_lat                      float64\n",
+       "end_lng                      float64\n",
+       "member_casual                 object\n",
+       "avgTemp                      float64\n",
+       "bike_rides_daily               int64\n",
+       "started                       object\n",
+       "ride_date                     object\n",
+       "date                  datetime64[ns]\n",
+       "month                          int64\n",
+       "season                        object\n",
+       "value                          int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_final.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a new dataframe with only the columns we want for the final dashboard\n",
+    "\n",
+    "df_1 = df_final.drop(columns = {'ride_id', 'started_at', 'ended_at', 'start_station_id', 'end_station_id', 'start_lat', 'start_lng', 'end_lat', 'end_lng', 'month'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Strip the time from the date column\n",
+    "\n",
+    "df_1['date'] = df_1['date'].dt.date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rideable_type</th>\n",
+       "      <th>start_station_name</th>\n",
+       "      <th>end_station_name</th>\n",
+       "      <th>member_casual</th>\n",
+       "      <th>avgTemp</th>\n",
+       "      <th>bike_rides_daily</th>\n",
+       "      <th>started</th>\n",
+       "      <th>ride_date</th>\n",
+       "      <th>date</th>\n",
+       "      <th>season</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01</th>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>S 4 St &amp; Wythe Ave</td>\n",
+       "      <td>Kent Ave &amp; S 11 St</td>\n",
+       "      <td>member</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>20428</td>\n",
+       "      <td>2022-01-01 16:01:22.082</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>winter</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01</th>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>Lexington Ave &amp; E 120 St</td>\n",
+       "      <td>Amsterdam Ave &amp; W 125 St</td>\n",
+       "      <td>member</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>20428</td>\n",
+       "      <td>2022-01-01 14:07:04.344</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>winter</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01</th>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>Lexington Ave &amp; E 120 St</td>\n",
+       "      <td>Amsterdam Ave &amp; W 125 St</td>\n",
+       "      <td>member</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>20428</td>\n",
+       "      <td>2022-01-01 12:02:26.943</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>winter</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01</th>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>Cleveland Pl &amp; Spring St</td>\n",
+       "      <td>Mott St &amp; Prince St</td>\n",
+       "      <td>member</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>20428</td>\n",
+       "      <td>2022-01-01 22:53:23.508</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>winter</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01</th>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>Central Park North &amp; Adam Clayton Powell Blvd</td>\n",
+       "      <td>E 110 St &amp; Madison Ave</td>\n",
+       "      <td>member</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>20428</td>\n",
+       "      <td>2022-01-01 08:04:51.755</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>winter</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           rideable_type                             start_station_name  \\\n",
+       "date                                                                      \n",
+       "2022-01-01  classic_bike                             S 4 St & Wythe Ave   \n",
+       "2022-01-01  classic_bike                       Lexington Ave & E 120 St   \n",
+       "2022-01-01  classic_bike                       Lexington Ave & E 120 St   \n",
+       "2022-01-01  classic_bike                       Cleveland Pl & Spring St   \n",
+       "2022-01-01  classic_bike  Central Park North & Adam Clayton Powell Blvd   \n",
+       "\n",
+       "                    end_station_name member_casual  avgTemp  bike_rides_daily  \\\n",
+       "date                                                                            \n",
+       "2022-01-01        Kent Ave & S 11 St        member     11.6             20428   \n",
+       "2022-01-01  Amsterdam Ave & W 125 St        member     11.6             20428   \n",
+       "2022-01-01  Amsterdam Ave & W 125 St        member     11.6             20428   \n",
+       "2022-01-01       Mott St & Prince St        member     11.6             20428   \n",
+       "2022-01-01    E 110 St & Madison Ave        member     11.6             20428   \n",
+       "\n",
+       "                            started   ride_date        date  season  value  \n",
+       "date                                                                        \n",
+       "2022-01-01  2022-01-01 16:01:22.082  2022-01-01  2022-01-01  winter      1  \n",
+       "2022-01-01  2022-01-01 14:07:04.344  2022-01-01  2022-01-01  winter      1  \n",
+       "2022-01-01  2022-01-01 12:02:26.943  2022-01-01  2022-01-01  winter      1  \n",
+       "2022-01-01  2022-01-01 22:53:23.508  2022-01-01  2022-01-01  winter      1  \n",
+       "2022-01-01  2022-01-01 08:04:51.755  2022-01-01  2022-01-01  winter      1  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Validate the dataframe was created successfully\n",
+    "\n",
+    "df_1.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(29838166, 11)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Validate the dataframe was created successfully\n",
+    "\n",
+    "df_1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rename rideable_type to bike_type for clarity\n",
+    "\n",
+    "df_1.rename(columns = {'rideable_type': 'bike_type'}, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bike_type</th>\n",
+       "      <th>start_station_name</th>\n",
+       "      <th>end_station_name</th>\n",
+       "      <th>member_casual</th>\n",
+       "      <th>avgTemp</th>\n",
+       "      <th>bike_rides_daily</th>\n",
+       "      <th>started</th>\n",
+       "      <th>ride_date</th>\n",
+       "      <th>date</th>\n",
+       "      <th>season</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01</th>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>S 4 St &amp; Wythe Ave</td>\n",
+       "      <td>Kent Ave &amp; S 11 St</td>\n",
+       "      <td>member</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>20428</td>\n",
+       "      <td>2022-01-01 16:01:22.082</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>winter</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01</th>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>Lexington Ave &amp; E 120 St</td>\n",
+       "      <td>Amsterdam Ave &amp; W 125 St</td>\n",
+       "      <td>member</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>20428</td>\n",
+       "      <td>2022-01-01 14:07:04.344</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>winter</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01</th>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>Lexington Ave &amp; E 120 St</td>\n",
+       "      <td>Amsterdam Ave &amp; W 125 St</td>\n",
+       "      <td>member</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>20428</td>\n",
+       "      <td>2022-01-01 12:02:26.943</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>winter</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01</th>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>Cleveland Pl &amp; Spring St</td>\n",
+       "      <td>Mott St &amp; Prince St</td>\n",
+       "      <td>member</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>20428</td>\n",
+       "      <td>2022-01-01 22:53:23.508</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>winter</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01</th>\n",
+       "      <td>classic_bike</td>\n",
+       "      <td>Central Park North &amp; Adam Clayton Powell Blvd</td>\n",
+       "      <td>E 110 St &amp; Madison Ave</td>\n",
+       "      <td>member</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>20428</td>\n",
+       "      <td>2022-01-01 08:04:51.755</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>winter</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               bike_type                             start_station_name  \\\n",
+       "date                                                                      \n",
+       "2022-01-01  classic_bike                             S 4 St & Wythe Ave   \n",
+       "2022-01-01  classic_bike                       Lexington Ave & E 120 St   \n",
+       "2022-01-01  classic_bike                       Lexington Ave & E 120 St   \n",
+       "2022-01-01  classic_bike                       Cleveland Pl & Spring St   \n",
+       "2022-01-01  classic_bike  Central Park North & Adam Clayton Powell Blvd   \n",
+       "\n",
+       "                    end_station_name member_casual  avgTemp  bike_rides_daily  \\\n",
+       "date                                                                            \n",
+       "2022-01-01        Kent Ave & S 11 St        member     11.6             20428   \n",
+       "2022-01-01  Amsterdam Ave & W 125 St        member     11.6             20428   \n",
+       "2022-01-01  Amsterdam Ave & W 125 St        member     11.6             20428   \n",
+       "2022-01-01       Mott St & Prince St        member     11.6             20428   \n",
+       "2022-01-01    E 110 St & Madison Ave        member     11.6             20428   \n",
+       "\n",
+       "                            started   ride_date        date  season  value  \n",
+       "date                                                                        \n",
+       "2022-01-01  2022-01-01 16:01:22.082  2022-01-01  2022-01-01  winter      1  \n",
+       "2022-01-01  2022-01-01 14:07:04.344  2022-01-01  2022-01-01  winter      1  \n",
+       "2022-01-01  2022-01-01 12:02:26.943  2022-01-01  2022-01-01  winter      1  \n",
+       "2022-01-01  2022-01-01 22:53:23.508  2022-01-01  2022-01-01  winter      1  \n",
+       "2022-01-01  2022-01-01 08:04:51.755  2022-01-01  2022-01-01  winter      1  "
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Verify name was changed successfully\n",
+    "\n",
+    "df_1.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a random split of 7% of the dataframe\n",
+    "\n",
+    "np.random.seed(32)\n",
+    "reduced = np.random.rand(len(df_1)) <= 0.993"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(207793, 11)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "smaller = df_1[~reduced]\n",
+    "smaller.shape "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write the smaller variable into a csv file for inclusion in the final dashboard\n",
+    "\n",
+    "smaller.to_csv(os.path.join(path, '02 Data', 'Dashboard Data', 'reduced_data_to_7_percent.csv'))"
    ]
   },
   {
