--- a/03 Scripts/MSikos Exercise 2.7 Task.ipynb
+++ b/03 Scripts/MSikos Exercise 2.7 Task.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,15 +47,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Stony\\AppData\\Local\\Temp\\ipykernel_28144\\1699888674.py:3: DtypeWarning: Columns (6,8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df_final = pd.read_csv(os.path.join(path, '02 Data', 'Prepared Data', 'final_data.csv'), index_col = 0)\n"
+      "C:\\Users\\Stony\\AppData\\Local\\Temp\\ipykernel_28144\\1699888674.py:3: DtypeWarning:\n",
+      "\n",
+      "Columns (6,8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "\n"
      ]
     }
    ],
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +95,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,16 +126,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a season column\n",
     "\n",
     "df_final['season'] = [\n",
-    "\"winter\" if (month == 12 or 1 <= month <= 4)\n",
-    "    else \"spring\" if (4 < month <= 5)\n",
-    "    else \"summer\" if (6 <= month <= 9)\n",
+    "\"winter\" if (month == 12 or 1 <= month <= 2)\n",
+    "    else \"spring\" if (3 < month <= 5)\n",
+    "    else \"summer\" if (6 <= month <= 8)\n",
     "    else \"fall\"\n",
     "for month in df_final['month']\n",
     "    ]"
@@ -148,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1948,7 +1950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1959,7 +1961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1986,7 +1988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -2040,7 +2042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2051,7 +2053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -2081,7 +2083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -4106,7 +4108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -4136,7 +4138,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4147,7 +4149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4158,7 +4160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4169,7 +4171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -4307,7 +4309,7 @@
        "2022-01-01  2022-01-01  winter      1  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4320,16 +4322,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(29838166, 11)"
+       "(29838166, 9)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4342,7 +4344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4353,7 +4355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -4491,7 +4493,7 @@
        "2022-01-01  2022-01-01  winter      1  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4504,7 +4506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4516,7 +4518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -4525,7 +4527,7 @@
        "(207793, 9)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4537,7 +4539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
